[package]
name = "bytecode"
version = "0.1.0"
authors = ["<tr.menke@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.21"
strum_macros = "0.21"
peekmore = "1.0"
maplit = "1.0"
num-traits = "0.2"
num-derive = "0.3"
variant_count = "1.1"